Finished upload image to cloudinary

--- a/movie/src/app/components/movie-modal/movie-modal.component.html
+++ b/movie/src/app/components/movie-modal/movie-modal.component.html
@@ -122,6 +122,9 @@
           >Select / Take Picture</ion-button
         >
       </ion-item>
+      <ion-item>
+        <ion-img [src]="selectedPhoto"></ion-img>
+      </ion-item>
     </ion-list>
 
     <div class="ion-float-right ion-padding">
