--- a/movie/src/app/pages/home/home.page.html
+++ b/movie/src/app/pages/home/home.page.html
@@ -68,7 +68,7 @@
               {{ movie.year }}
             </h3>
           </ion-text>
-          <!-- <ion-text color="medium">
+          <ion-text color="medium">
             <h5>
               <span *ngIf="movie.likes"
                 ><ion-icon
@@ -83,7 +83,7 @@
                 {{ movie.rate }}</span
               >
             </h5>
-          </ion-text> -->
+          </ion-text>
           <ion-text color="medium">
             <h4>{{ movie.notes }}</h4>
           </ion-text>
