--- a/movie/src/app/pages/detail/detail.page.html
+++ b/movie/src/app/pages/detail/detail.page.html
@@ -14,7 +14,7 @@
       <ion-col size-lg="6" offset-lg="3" size-md="10" offset-md="1">
         <ion-card *ngIf="movie">
           <ion-item lines="none">
-            <h2><b>{{ movie?.title }}</b></h2>
+            <h2 style="margin: auto 0px"><b>{{ movie?.title }}</b></h2>
             <ion-chip color="tertiary" slot="end">
               <ion-icon
                 *ngIf="!movie.genreImage"
@@ -29,7 +29,7 @@
               <ion-label>{{ movie?.genre }}</ion-label>
             </ion-chip>
           </ion-item>
-          <ion-item lines="none" class="poster">
+          <ion-item lines="none" class="poster" class="ion-no-padding">
             <img
               *ngIf="movie.poster"
               [src]="movie?.poster"
@@ -38,32 +38,46 @@
               (error)="handleMissingImage($event)"
             />
           </ion-item>
-          <ion-card-content>
-            <ion-item>
-              <p>
-                <ion-icon name="information-circle-outline"></ion-icon> {{
-                movie?.notes }}
-              </p>
-              <!-- <ion-badge tappable slot="end" (click)="watchTrailer()"
-                ><ion-icon name="eye"></ion-icon> Trailer</ion-badge
-              > -->
+          <ion-card-content class="sub-info ion-no-padding">
+            <ion-item *ngIf="movie?.notes" class="ion-no-padding">
+              <ion-grid>
+                <ion-row>
+                  <ion-col size="2">
+                    <ion-icon
+                      class="icon"
+                      name="information-circle-outline"
+                    ></ion-icon>
+                  </ion-col>
+                  <ion-col>
+                    <p class="text">{{ movie?.notes }}</p>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
             </ion-item>
-            <ion-row>
-              <ion-item *ngIf="movie.cast.length !== 0">
-                <p><ion-icon name="people"></ion-icon> {{ movie?.cast }}</p>
-                <!-- <ion-badge tappable slot="end" (click)="showActors()"
-                  ><ion-icon name="eye"></ion-icon> Actors</ion-badge
-                > -->
-              </ion-item>
-            </ion-row>
+
+            <ion-item *ngIf="movie.cast.length !== 0" class="ion-no-padding">
+              <ion-grid>
+                <ion-row>
+                  <ion-col size="2">
+                    <ion-icon class="icon" name="people"></ion-icon>
+                  </ion-col>
+                  <ion-col>
+                    <p class="text">{{ movie?.cast }}</p>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-item>
           </ion-card-content>
+
+          <!-- begin like comment amount -->
           <ion-row>
-            <ion-item style="width: 100%">
-              <ion-button small *ngIf="movie.likes">
+            <ion-item style="width: 100%" class="ion-no-padding">
+              <ion-button small *ngIf="movie.likes" style="margin-left: 12px">
                 <ion-icon slot="start" name="thumbs-up"></ion-icon>
                 {{ movie?.likes }} Likes
               </ion-button>
               <ion-button
+                style="padding-right: 10px"
                 small
                 *ngIf="movie.comments"
                 (click)="onClickShowComment()"
@@ -77,6 +91,7 @@
             </ion-item>
           </ion-row>
 
+          <!-- begin like comment buttons -->
           <ion-row>
             <ion-col col-auto class="ion-text-left">
               <ion-button
