--- a/movie/src/app/components/show-comment-modal/show-comment-modal.component.html
+++ b/movie/src/app/components/show-comment-modal/show-comment-modal.component.html
@@ -5,13 +5,13 @@
         <ion-icon name="close" color="light"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title> {{ modal.title }} </ion-title>
+    <ion-title> {{ movie.title }} </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="outer-content ion-padding">
+<ion-content class="outer-content ion-padding" *ngIf="movie.comments">
   <ion-list>
-    <ion-item *ngFor="let comment of modal.movie.comments">
+    <ion-item *ngFor="let comment of movie.comments">
       <ion-avatar slot="start">
         <img
           src="https://cdn1.iconfinder.com/data/icons/unique-round-blue/93/user-512.png"
