--- a/movie/src/app/components/show-comment-modal/show-comment-modal.component.html
+++ b/movie/src/app/components/show-comment-modal/show-comment-modal.component.html
@@ -5,11 +5,11 @@
         <ion-icon name="close" color="light"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title> {{ movie.title }} </ion-title>
+    <ion-title> {{ movie?.title }} </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="outer-content ion-padding" *ngIf="movie.comments">
+<ion-content class="outer-content ion-padding" *ngIf="movie?.comments">
   <ion-list>
     <ion-item *ngFor="let comment of movie.comments">
       <ion-avatar slot="start">
