add some unit test for movie state

--- a/movie/src/app/pages/home/home.page.html
+++ b/movie/src/app/pages/home/home.page.html
@@ -52,7 +52,7 @@
     <ion-item-sliding
       *ngFor="let movie of movies$ | async | filter:search.value; let i = index"
     >
-      <ion-item tappable (click)="viewMovieDetails(movie)">
+      <ion-item tappable (click)="viewMovieDetails(movie.id)">
         <ion-thumbnail slot="start">
           <img
             [src]="movie.poster"
@@ -122,7 +122,7 @@
         size-xs="12"
         *ngFor="let movie of movies$ | async; let i = index"
       >
-        <ion-card (click)="viewMovieDetails(movie)">
+        <ion-card (click)="viewMovieDetails(movie.id)">
           <ion-item lines="none">
             <h2><strong>{{ movie?.title }}</strong></h2>
           </ion-item>
