--- a/movie/src/app/pages/home/home.page.scss
+++ b/movie/src/app/pages/home/home.page.scss
@@ -25,3 +25,9 @@
 #container a {
   text-decoration: none;
 }
+
+.update-movie-modal .modal-wrapper {
+  min-height: 400px;
+  height: auto;
+  display: none;
+}
