add response type and add catchError from RxJs to handle error

--- a/movie/src/app/pages/home/home.page.html
+++ b/movie/src/app/pages/home/home.page.html
@@ -1,3 +1,4 @@
+<!-- <ng-container *ngLet="movies$ | async as movies"> -->
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title> Movies List </ion-title>
@@ -156,3 +157,4 @@
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
+<!-- </ng-container> -->
